[gd_scene load_steps=2 format=3 uid="uid://dqc4gxtx62j3s"]

[ext_resource type="Script" path="res://scripts/debug/debug_overlay.gd" id="1_debug"]

[node name="DebugOverlay" type="CanvasLayer"]
layer = 128
script = ExtResource("1_debug")

[node name="Panel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 700.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Debug Overlay (F3)"
theme_override_font_sizes/font_size = 16

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Game State" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Game State"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Game State"
autowrap_mode = 3

[node name="Errors" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ErrorsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Errors"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Performance" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="PerformanceLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Performance"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Performance"
autowrap_mode = 3

[node name="Controls" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ControlsVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Debug Controls"
theme_override_font_sizes/font_size = 14

[node name="AddMoneyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Add $50k Money"

[node name="AddAPButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Add 5 Action Points"

[node name="TriggerEventButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Trigger Random Event"

[node name="SkipTurnButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Skip Turn"

[node name="ResetGameButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Reset Game"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RefreshRate" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/RefreshRate"]
layout_mode = 2
text = "Refresh Rate:"

[node name="RateSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/RefreshRate"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="RateLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/RefreshRate"]
layout_mode = 2
text = "1.0s"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/AddMoneyButton" to="." method="_on_add_money_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/AddAPButton" to="." method="_on_add_ap_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/TriggerEventButton" to="." method="_on_trigger_event_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/SkipTurnButton" to="." method="_on_skip_turn_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/ResetGameButton" to="." method="_on_reset_game_button_pressed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/RefreshRate/RateSlider" to="." method="_on_rate_slider_value_changed"]
